{
    "name": "Controls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "9d07a3c1-3bfd-4353-a361-11c266ec18c8",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "175af708-dd93-44cd-8653-6f99acb6050c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "228e5c39-ea2c-4e12-bb92-a62db87c3b9c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TransferPoint",
                    "type": "Button",
                    "id": "4d44a0b3-23e3-41ee-b4ca-2182ce9aa2d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "d8d70096-df5b-4b44-840a-c255001a21a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftConveyorSelection",
                    "type": "Button",
                    "id": "7b1382c9-000e-419e-a9b8-fdd8e8789409",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReverseSelected",
                    "type": "Button",
                    "id": "d5231a65-6785-4287-bd66-e45296865257",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0df3a516-35b9-4e25-bd10-faa46fba5316",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec979d7a-308e-4473-8f5a-6251c9b97c85",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b17e5c03-bcda-45a2-9401-04b7f3895352",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TransferPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d015a08a-16a5-4dba-9402-e236cbaf5f5f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69f281b0-f542-4215-bc0d-19c284379ea1",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftConveyorSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5f78480-1f7a-4751-9f0c-fb85ad556982",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseSelected",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}